# wasm-micro-runtime

./: .gitignore  Dockerfile
core/: config.h
core/uniapp-framework/: README.md  app_ext_lib_export.c
core/uniapp-framework/app-native-shared/: README.md  attr_container.c  restful_utils.c
core/uniapp-framework/base/app/: bh_platform.h  req_resp_api.h  request.c  timer.c  timer_api.h
core/uniapp-framework/base/app/wa-inc/: request.h  timer_wasm_app.h
core/uniapp-framework/template/native/: wasm_lib.cmake
doc/: build_wasm_app.md  embed_wamr.md  pthread_library.md
product-mini/app-samples/hello-world/: build.sh
product-mini/app-samples/iot/: build.sh
samples/basic/: build.sh
samples/gui/wasm-apps/decrease/: Makefile
samples/gui/wasm-apps/increase/: Makefile
samples/iot/: CMakeLists.txt  build.sh  run.sh
samples/iot-uniapp/: .clang-format  CMakeLists.txt  README.md  build.sh
samples/iot-uniapp/src/: main.c  native.c
samples/iot/src/: interface.h  main.c  native_impl.c
samples/iot/wasm-apps/: lightbulb.c
samples/littlevgl/wasm-apps/: Makefile_wasm_app  Makefile_wasm_app_no_wasi
samples/multi-module/wasm-apps/: CMakeLists.txt
samples/simple/: build.sh
test-tools/component_test/suites/01-life-cycle/test-app/: build.sh
wamr-sdk/: build_sdk.sh
